--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "type":"module",
+  "type": "module",
   "dependencies": {
-    "commander": "^13.1.0"
+    "chalk": "^5.4.1",
+    "commander": "^13.1.0",
+    "express": "^4.21.2"
   }
 }
